<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="389dp"
        android:layout_height="108dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/text_view_custom_bg"
        android:gravity="center_horizontal"
        android:text="@string/time_text_view"
        android:textAlignment="center"
        android:textColor="#f5f6fa"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonStop"
        android:layout_width="107dp"
        android:layout_height="58dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btnbackground"
        android:contentDescription="@string/image_of_stop_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/buttonStart"
        android:layout_width="107dp"
        android:layout_height="58dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btnbackground"
        android:contentDescription="@string/image_of_start_button"
        app:backgroundTintMode="screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/buttonLap"
        android:layout_width="107dp"
        android:layout_height="58dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/btnbackground"
        android:contentDescription="@string/image_of_lap_reset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.99" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.01" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button_text_view"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="@+id/buttonStart"
        app:layout_constraintStart_toStartOf="@+id/buttonStart"
        app:layout_constraintTop_toTopOf="@+id/buttonStart" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_button_text_view"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/buttonStop"
        app:layout_constraintEnd_toEndOf="@+id/buttonStop"
        app:layout_constraintStart_toStartOf="@+id/buttonStop"
        app:layout_constraintTop_toTopOf="@+id/buttonStop" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lap_reset_button_text_view"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/buttonLap"
        app:layout_constraintEnd_toEndOf="@+id/buttonLap"
        app:layout_constraintStart_toStartOf="@+id/buttonLap"
        app:layout_constraintTop_toTopOf="@+id/buttonLap" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="410dp"
        android:layout_height="1dp"
        android:layout_marginTop="44dp"
        android:background="#40407a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStop" />

    <ScrollView
        android:id="@+id/sv_laps"
        android:layout_width="370dp"
        android:layout_height="320dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView5">


            <EditText
                android:id="@+id/et_laps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:autofillHints=""
                android:background="@null"
                android:contentDescription="@string/stored_lap_values"
                android:gravity="center_vertical"
                android:inputType="textMultiLine"
                android:isScrollContainer="true"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textColor="#f7f1e3"
                android:textSize="26sp">

            </EditText>


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>